--- a/protocol/Makefile
+++ b/protocol/Makefile
@@ -439,5 +439,5 @@ loadtest-run:
 	@echo "Running loadtest at commit ${GIT_COMMIT_HASH}"
 	cd testing/petri && go test -v -race ./
 	@echo "Loadtest finished, cleaning up containers"
-	docker rm -f $(shell docker ps -a -q | grep busybox:latest)
+	docker rm -f $(shell docker ps -a -q --filter ancestor=busybox)
 	docker volume rm $(shell docker volume ls -q --filter dangling=true)
