--- a/protocol/docker-compose.yml
+++ b/protocol/docker-compose.yml
@@ -117,9 +117,9 @@ services:
     entrypoint:
       - slinky
       - -oracle-config-path
-      - /etc/oracle.json
+      - /oracle/oracle.json
       - -market-config-path
-      - /etc/market.json
+      - /oracle/market.json
       - -host
       - "0.0.0.0"
       - -port
