--- a/protocol/docker-compose.yml
+++ b/protocol/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       - /dydxprotocol/chain/.alice
       - --p2p.persistent_peers
       - "17e5e45691f0d01449c84fd4ae87279578cdd7ec@dydxprotocold0:26656,b69182310be02559483e42c77b7b104352713166@dydxprotocold1:26656,47539956aaa8e624e0f1d926040e54908ad0eb44@dydxprotocold2:26656,5882428984d83b03d0c907c1f0af343534987052@dydxprotocold3:26656"
-      - --bridge-daemon-eth-rpc-endpoint
-      - "${ETH_RPC_ENDPOINT}"
+      - --bridge-daemon-enabled=false
+      - --liquidation-daemon-enabled=false
       - --dd-error-tracking-format
       - "true"
       - --max-daemon-unhealthy-seconds
@@ -45,8 +45,8 @@ services:
        - /dydxprotocol/chain/.bob
        - --p2p.persistent_peers
        - "17e5e45691f0d01449c84fd4ae87279578cdd7ec@dydxprotocold0:26656,b69182310be02559483e42c77b7b104352713166@dydxprotocold1:26656,47539956aaa8e624e0f1d926040e54908ad0eb44@dydxprotocold2:26656,5882428984d83b03d0c907c1f0af343534987052@dydxprotocold3:26656"
-       - --bridge-daemon-eth-rpc-endpoint
-       - "${ETH_RPC_ENDPOINT}"
+       - --bridge-daemon-enabled=false
+       - --liquidation-daemon-enabled=false
        - --dd-error-tracking-format
        - "true"
        - --max-daemon-unhealthy-seconds
@@ -73,8 +73,8 @@ services:
        - /dydxprotocol/chain/.carl
        - --p2p.persistent_peers
        - "17e5e45691f0d01449c84fd4ae87279578cdd7ec@dydxprotocold0:26656,b69182310be02559483e42c77b7b104352713166@dydxprotocold1:26656,47539956aaa8e624e0f1d926040e54908ad0eb44@dydxprotocold2:26656,5882428984d83b03d0c907c1f0af343534987052@dydxprotocold3:26656"
-       - --bridge-daemon-eth-rpc-endpoint
-       - "${ETH_RPC_ENDPOINT}"
+       - --bridge-daemon-enabled=false
+       - --liquidation-daemon-enabled=false
        - --dd-error-tracking-format
        - "true"
        - --max-daemon-unhealthy-seconds
@@ -99,8 +99,8 @@ services:
        - /dydxprotocol/chain/.dave
        - --p2p.persistent_peers
        - "17e5e45691f0d01449c84fd4ae87279578cdd7ec@dydxprotocold0:26656,b69182310be02559483e42c77b7b104352713166@dydxprotocold1:26656,47539956aaa8e624e0f1d926040e54908ad0eb44@dydxprotocold2:26656,5882428984d83b03d0c907c1f0af343534987052@dydxprotocold3:26656"
-       - --bridge-daemon-eth-rpc-endpoint
-       - "${ETH_RPC_ENDPOINT}"
+       - --bridge-daemon-enabled=false
+       - --liquidation-daemon-enabled=false
        - --dd-error-tracking-format
        - "true"
        - --max-daemon-unhealthy-seconds
@@ -117,9 +117,9 @@ services:
     entrypoint:
       - slinky
       - -oracle-config-path
-      - /oracle/oracle.json
+      - /etc/oracle.json
       - -market-config-path
-      - /oracle/market.json
+      - /etc/market.json
       - -host
       - "0.0.0.0"
       - -port
